--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 
 .main{
     margin-top: 200px;
-    /*text-align: center;*/
 }
 
 
@@ -27,7 +26,7 @@
     border-radius:24px;
 
     line-height: 24px;
-    padding-top :10px;
+    padding-top: 10px;
     padding-bottom:10px;
     padding-right:30px;
     padding-left:30px;
@@ -44,13 +43,13 @@
     background: #dfe1e5;
 
     margin-top: 30px;
-    margin-right:10;
-    margin-left:20 ;
+    margin-right:10px;
+    margin-left:20px ;
 
     border:none;
     border-radius:4px ;
 
-    padding-top :8px;
+    padding-top:8px;
     padding-bottom:8px;
     padding-right:16px;
     padding-left:16px;
